Several very minor edits.

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -305,9 +305,9 @@ Leadership in residential subgroups (e.g., hunting party, work group) was relati
 
 >Their domestic policy may be described as a communism modified by the authority, more or less nominal, of the chief. The head chief of a tribe is called maia igla and the elders, or sub-chiefs, i.e. those in authority over each community, consisting of from 20 to 50 individuals, maicla . The head chief, who usually resides at a permanent encampment, has authority over all the sub-chiefs, but his power, like theirs, is very limited. It is exercised mainly in organising meetings between the various communities belonging to his tribe, and in exerting influence in all questions affecting the welfare of his followers. It is the chief alone, as may be supposed, who directs the movements of a party while on hunting and fishing expeditions, or when migrating. It is usually through his intervention that disputes are settled, but he possesses no power to punish or enforce obedience to his wishes, it being left to all alike to take the law into their own hands when aggrieved. The aryoto and eremtaga in each tribe have their own head chief, who are independent the one of the other.
 
-Hunter-gatherers and pastoralists, populations more likely to experience high residential mobility [@wild_making_2019; @rigby_persistent_1985; @kelly_foraging_2013], exhibited greater relative frequencies of leadership within residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community more so than hunter-gatherers and on par with horticulturalists. Pastoral and horticultural populations often experience elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaborated political leadership systems [@ember_warfare_1992]. For example, among the Somali, a politically complex and socially stratified agro-pastoralists group distributed across the Horn of Africa, @mo04-021 (p. 58) notes that, "the Sultan does not lead the army of the tribe in war. He names a chief of the armed forces."
+Hunter-gatherers and pastoralists, populations more likely to experience high residential mobility [@wild_making_2019; @rigby_persistent_1985; @kelly_foraging_2013], exhibited greater relative frequencies of leadership within residential groups and kin groups. Pastoralists, however, rely in part on a highly defensible resource base (i.e., livestock) and exhibit leadership beyond the community more so than hunter-gatherers and on par with horticulturalists. Pastoral and horticultural populations often experience elevated rates of inter-group conflict relative to mobile hunter-gatherers and these results are consistent with a relationship between increased inter-group conflict and more elaborated political leadership systems [@ember_warfare_1992]. For example, among the Somali, a politically complex and socially stratified agro-pastoralists group distributed across the Horn of Africa, @mo04-021 [p. 58] notes that, "the Sultan does not lead the army of the tribe in war. He names a chief of the armed forces."
 
-Figure \@ref(fig:grouptype) is consistent with a negative relationships between political leadership at the community leadership or above and leadership in kin groups or residential groups. One possible interpretation is that as political structures become more institutionalized and economic systems transcend the household, leadership within households and residential groups diminishes It is interesting, however, that even among the agricultural populations that are characterized by leadership systems beyond the community level, leadership within residential and family group persists. For example, among rural Korean populations a chairwomen of local organizations maintain important leadership positions within the groups and represent the group to governmental forces. @aa01-062 (p. 173) describes that in these local 'clubs', "the procedure of discussion and decision-making is not based on an idea of democracy but rather on that of unanimity. In this context, the ‘leader’ does not have to be a person of marked influence in the decision-making process. She is not a figurehead but rather a middleman in the meeting, functioning, in effect, as a go-between for the group. There is no despotic idea in the context of a total consensus in this essentially egalitarian society. The chairwoman stands as a middleman between the government and the village. Although the government may call her a ‘leader’ in the village, she properly does not occupy this role."
+Figure \@ref(fig:grouptype) is consistent with a negative relationships between political leadership at the community leadership or above and leadership in kin groups or residential groups. One possible interpretation is that as political structures become more institutionalized and economic systems transcend the household, leadership within households and residential groups diminishes. It is interesting, however, that even among the agricultural populations that are characterized by leadership systems beyond the community level, leadership within residential and family group persists. For example, among rural Korean populations a chairwomen of local organizations maintain important leadership positions within the groups and represent the group to governmental forces. @aa01-062 [p. 173] describes that in these local 'clubs', "the procedure of discussion and decision-making is not based on an idea of democracy but rather on that of unanimity. In this context, the ‘leader’ does not have to be a person of marked influence in the decision-making process. She is not a figurehead but rather a middleman in the meeting, functioning, in effect, as a go-between for the group. There is no despotic idea in the context of a total consensus in this essentially egalitarian society. The chairwoman stands as a middleman between the government and the village. Although the government may call her a ‘leader’ in the village, she properly does not occupy this role."
 
 ## Leader functions and qualities
 
@@ -315,7 +315,7 @@ Our analysis identified several leader functions and qualities that were near cu
 
 ### Universal dimensions
 
-Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. @oc06-034 (p. 236) in describing kin group leaders among the Iban, small-scale highland horticulturalists primarily in Borneo and Sarawak, provides example of this suite of traits in leaders (which also include elements of prestige-based and charismatic leadership discussed above): 
+Across a broad range of cultures and social contexts leaders are nearly universally high status males who are described as knowledgeable or intelligent and who are experienced and have a demonstrated history of previous accomplishments or special skills. They most frequently resolve conflicts within their respective groups while also providing important social functions, organizing cooperation among followers, providing counsel or input in followers' affairs, and distributing resources. @oc06-034 [p. 236] in describing kin group leaders among the Iban, small-scale highland horticulturalists primarily in Borneo and Sarawak, provides example of this suite of traits in leaders (which also include elements of prestige-based and charismatic leadership discussed above): 
 
 >Bravery may be considered as a means of acquiring status in what Freeman has identified as an egalitarian society. The leader of a longhouse, the tuai rumah, is elected by both men and women of the longhouse for his skills in oratory, warfare, and farming, and his familiarity with adat , or customary law, in order to resolve disputes (Freeman 1970:111). Although usually a man, women tuai rumah are not unknown. The tuai rumah must inspire the confidence of his followers and exemplify the qualities of bravery, endurance, and determination that are essential for survival. Skill in farming and warfare is important in the pioneering context, in which the tuai rumah leads a group to establish a new settlement. The tuai rumah has no authority to command others, but is empowered to resolve disputes through influence and by reference to custom.
 
@@ -323,7 +323,7 @@ See Figure \@ref(fig:varsupport). These qualities and functions correspond to th
 
 ### Variable dimensions
 
-Several functions and qualities that are theoretically important were relatively rare in the ethnographic record. In the literature on leadership among non-human animals, for example, leaders commonly initiate group movement [@couzin_effective_2005], and "movement" was one of four leadership dimensions that @smith_leadership_2016 identified as comparable among humans and non-human animals, yet movement or migration was identified as a leader function in only `r movement_pct`% of cultures, of which the vast majority (71%) were hunter-gatherers. Among the Blackfoot in the North American plains for example, @nf06-061 (p. 411) describes that, "If there was a dispute as to whether the camp should move north or south, the chief might present his arguments, gain support, and then say that he was going south. He did not order the others to follow, but he knew that they probably would go with him." 
+Several functions and qualities that are theoretically important were relatively rare in the ethnographic record. In the literature on leadership among non-human animals, for example, leaders commonly initiate group movement [@couzin_effective_2005], and "movement" was one of four leadership dimensions that @smith_leadership_2016 identified as comparable among humans and non-human animals, yet movement or migration was identified as a leader function in only `r movement_pct`% of cultures, of which the vast majority (71%) were hunter-gatherers. Among the Blackfoot in the North American plains for example, @nf06-061 [p. 411] describes that, "If there was a dispute as to whether the camp should move north or south, the chief might present his arguments, gain support, and then say that he was going south. He did not order the others to follow, but he knew that they probably would go with him." 
 
 Several theories of leadership also emphasize the moral authority of leaders [e.g., @henrich_big_2015; @henrich_evolution_2001; @richerson_tribal_2009; @tietjen_moral_1985; @boggild_evolved_2016], yet leaders were seen as sources of moral authority or "fair" in only a minority of cultures (`r moral_pct`% and `r fairness_pct`% of cultures, respectively). The *Dominance* theory of leadership [e.g., @chapais_competence_2015; @cheng_dominance_2019; @cheng_pride_2010; @henrich_evolution_2001; @tiger_imperial_1971] emphasizes leaders' ability to instill fear, but in only `r feared_pct`% of cultures were leaders characterized as feared. Finally, a large literature on leadership in industrialized societies highlights the attractiveness of leaders [e.g., @sinclair_sexuality_1995; @altemeyer_sexual_1974; @march_leadership_2009], but leaders were characterized as attractive in only `r attractive_pct`% of cultures.
 
@@ -331,13 +331,13 @@ Several theories of leadership also emphasize the moral authority of leaders [e.
 
 Leadership and high social status are expected to be associated with particular suites of characteristics, which potentially vary by cultural or social context, personality, or via other inter-individual variation [@cheng_two_2013; @von_rueden_roots_2014; @hogan_personality_2020; @lukaszewski_extraversion_2015; @henrich_evolution_2001]. Exploratory cluster analyses reported here suggest multiple leadership phenotypes. 
 
-We performed hierarchical cluster analysis on our leader quality and leader function variables to determine if these variables formed theoretically meaningful categories. Variables were clustered together if they were positively correlated. Leader qualities formed two top-level clusters, which we identify as a *Material, social, and reproductive success* cluster, and a *Social orientation* cluster. See Figure \@ref(fig:cluster)A. Several of traits often co-occur. Among the Trobriands, horticulturalists in Papua New Guinea, @ol06-037 (p. 47 ) describes relationships between polygynous marriages, increased wealth, and widespread social contacts: 
+We performed hierarchical cluster analysis on our leader quality and leader function variables to determine if these variables formed theoretically meaningful categories. Variables were clustered together if they were positively correlated. Leader qualities formed two top-level clusters, which we identify as a *Material, social, and reproductive success* cluster, and a *Social orientation* cluster. See Figure \@ref(fig:cluster)A. Several of traits often co-occur. Among the Trobriands, horticulturalists in Papua New Guinea, @ol06-037 [p. 47] describes relationships between polygynous marriages, increased wealth, and widespread social contacts: 
 
->Chiefs managed unusually large quantities of resources and it is agreed that the basis of such wealth was polygamy. Rank was quite directly expressed in the number of wives. The chief of Omarakana had 16 wives in Malinowski's time, while his predecessor Enamakala had 19 in 1893 (Annual Report 1893-4:19). In 1950 despite long-established missionary activity, there were still 13 (Powell 1960: 136). In traditional Trobriand society it seems that all leaders of village clusters of guyau status became polygamists. An emerging leader might also expect to be given wives by traditional allies outside the cluster while he might demand them from traditional rivals of subordinate subclans (Powell 1960:136)...
+>Chiefs managed unusually large quantities of resources and it is agreed that the basis of such wealth was polygamy. Rank was quite directly expressed in the number of wives. The chief of Omarakana had 16 wives in Malinowski's time, while his predecessor Enamakala had 19 in 1893 (Annual Report 1893-4:19). In 1950 despite long-established missionary activity, there were still 13 (Powell 1960: 136). In traditional Trobriand society it seems that all leaders of village clusters of guyau status became polygamists. An emerging leader might also expect to be given wives by traditional allies outside the cluster while he might demand them from traditional rivals of subordinate subclans (Powell 1960:136)....
 
-Most of the leader quality variables were found in the *Social orientation* cluster, which had two smaller and more weakly supported subclusters that we identified as *Ability to provide social benefits* and *Ability to impose social costs*. The social benefits subcluster contained the *Knowledgeable/intelligent* and *Experienced/accomplished* variables that have been emphasized by the *Prestige* theory [@henrich_evolution_2001; @cheng_two_2013] and the more general *Computational services* theory [@hagen_leadership_2019; @garfield_evolutionary_2019], and these variables are among the most strongly supported in the ethnographic record (Figure \@ref(fig:varsupport), a point to which we shall return. As brief examples of the very many in the ethnographic record, among the Azande, "though the most knowledgeable witch-doctors tend to become leaders, there is no institutionalized organization or leadership among them." [fo07-056] (p. 85); and among the Highland Scots, es10-003 (p. 147) notes, "on the whole, their long ties with place and people, coupled with education, made them useful leaders of a community in which leaders were needed to adapt life to a changing economy." Such exceptionally talented leaders, however, also face unique challenges, particularly within more egalitarian societies which emphasizes personal autonomy and resit hierarchy in the context of cultural transitions. @nm09-056 (p. 183) describes Laura Cornelius Kellogg (also known as Minnie and Wynnogene, 1880-1947), a land-claims activist, writer, and perhaps the most famous female leader among the Iroquois:
+Most of the leader quality variables were found in the *Social orientation* cluster, which had two smaller and more weakly supported subclusters that we identified as *Ability to provide social benefits* and *Ability to impose social costs*. The social benefits subcluster contained the *Knowledgeable/intelligent* and *Experienced/accomplished* variables that have been emphasized by the *Prestige* theory [@henrich_evolution_2001; @cheng_two_2013] and the more general *Computational services* theory [@hagen_leadership_2019; @garfield_evolutionary_2019], and these variables are among the most strongly supported in the ethnographic record (Figure \@ref(fig:varsupport)), a point to which we shall return. As brief examples of the very many in the ethnographic record, among the Azande, "though the most knowledgeable witch-doctors tend to become leaders, there is no institutionalized organization or leadership among them" [@fo07-056, p. 85]; and among the Highland Scots, @es10-003 [p. 147] notes, "on the whole, their long ties with place and people, coupled with education, made them useful leaders of a community in which leaders were needed to adapt life to a changing economy." Such exceptionally talented leaders, however, also face unique challenges, particularly within more egalitarian societies which emphasizes personal autonomy and resit hierarchy in the context of cultural transitions. @nm09-056 [p. 183] describes Laura Cornelius Kellogg (also known as Minnie and Wynnogene, 1880-1947), a land-claims activist, writer, and perhaps the most famous female leader among the Iroquois:
 
->Despite her exceptional gifts -- a brilliant mind, beauty, selfconfidence, unusual oratorical abilities, and her educational attainments -- Kellogg is also the most controversial Iroquois leader of the twentieth century. It is clear from her many bizarre involvements that she misused her prodigious talents and/or was incapable of carrying out all the massive designs she had for her people's betterment. Although acknowledged today as a major force and brilliant person, she is accused by many Iroquois elders of swindling them out of hundreds of thousands of dollars in her abortive efforts to bring their land claims to fruition and of creating debilitating factionalism that impeded tribal development for decades. Unfortunately, because of her questionable ethies and her inability to carry out what she espoused, Kellogg is blamed today for all that went wrong in Iroquois history in the interwar period. Consequently, her life story had the feel of a Greek tragedy: she wanted to use her extraordinary abilities to help her people but ended up accused by them of being a common outlaw.
+>Despite her exceptional gifts -- a brilliant mind, beauty, self confidence, unusual oratorical abilities, and her educational attainments -- Kellogg is also the most controversial Iroquois leader of the twentieth century. It is clear from her many bizarre involvements that she misused her prodigious talents and/or was incapable of carrying out all the massive designs she had for her people's betterment. Although acknowledged today as a major force and brilliant person, she is accused by many Iroquois elders of swindling them out of hundreds of thousands of dollars in her abortive efforts to bring their land claims to fruition and of creating debilitating factionalism that impeded tribal development for decades. Unfortunately, because of her questionable ethics and her inability to carry out what she espoused, Kellogg is blamed today for all that went wrong in Iroquois history in the interwar period. Consequently, her life story had the feel of a Greek tragedy: she wanted to use her extraordinary abilities to help her people but ended up accused by them of being a common outlaw.
 
 The remaining social benefit variables included a mix of positive personal traits, such as generosity and proper behavior, as well as interpersonal skills, having a favorable personality, oratory skill, and charisma, which correspond to a charismatic style of leadership that has been identified in industrialized settings and widely discussed in sociology and more recently emphasized in evolutionary psychology models of leadership [@den_hartog_culture_1999; @weber_distribution_1978; @grabo_charismatic_2016; @howell_role_2005]. A few variables did not seem to fit the social benefit theme, however, such as *Xenophobia* and *Drug consumption* (although drug use is often an important social activity).
 
@@ -349,21 +349,19 @@ Leaders, probably as a consequence of their ability to provide social benefits a
 
 The leader function variables formed two major clusters, one that we identified as "Prosociality" and one that we identified as "Management". The prosocial cluster included *Distribute resources*, *Protection*, and *Prosocial investment*, which are functions that are commonly highlighted in the anthropological literature on leadership in nonindustrial societies [@sahlins_poor_1963; @johnson_organizational_1982; @service_origins_1975; @boehm_egalitarian_1993; @boehm_hierarchy_1999; @johnson_evolution_1987]. In the absence of institutionalized leadership roles, which characterize many of the relatively small-scale populations in this sample, leaders often maintain social influence via continued community support and the demands of followers can shape the functions of leaders to meet local needs.  
 
-The management cluster included many more variables, which were grouped into two subclusters that we identified as "Mediation" and "Organization". The mediation subcluster included variables such as *Resolve conflict* (the most widely supported function in our sample) and *Provide counsel* (also widely supported), which again are functions that are commonly noted in the anthropological literature [@wiessner_risk_1982; @wiessner_collective_2019; @boehm_hierarchy_1999; @knauft_violence_1991], and concerning conflict resolution specifically, widespread among nonhuman animals as well [@smith_leadership_2016; @smith_obstacles_2018; @wilson_sociobiology:_1980]. Among the Mbuti, hunter-gatherers in the Congo Basin known for strong cultural values of personal autonomy and egalitarianism, @fo04-001 (p. 185) describes the nature of conflict resolution processes in the absence of strong authority: 
+The management cluster included many more variables, which were grouped into two subclusters that we identified as "Mediation" and "Organization". The mediation subcluster included variables such as *Resolve conflict* (the most widely supported function in our sample) and *Provide counsel* (also widely supported), which again are functions that are commonly noted in the anthropological literature [@wiessner_risk_1982; @wiessner_collective_2019; @boehm_hierarchy_1999; @knauft_violence_1991], and concerning conflict resolution specifically, widespread among nonhuman animals as well [@smith_leadership_2016; @smith_obstacles_2018; @wilson_sociobiology:_1980]. Among the Mbuti, hunter-gatherers in the Congo Basin known for strong cultural values of personal autonomy and egalitarianism, @fo04-001 [p. 185] describes the nature of conflict resolution processes in the absence of strong authority: 
 
 >The elder settles numerous disputes, both within and without his hunting band. Such disputes mainly concern marital disagreements, Schebesta says. The elders often settle controversies by delivering speeches during the evening, leading frequently to noisy debates between the elders of different bands or lineages. Outside the lineage context, the elder is not in any way different from the others; there are none of the trappings of villager chieftainship. He delivers his decisions without hesitancy and is obeyed in the same way within his lineage. His power is limited, however, by custom and tradition as well as by context. He may neither ignore nor alter traditional practices.
 
 Other variables in this subcluster indicated more generic group strategizing, such as *Strategic planning* and *Group representative* [@de_cremer_intergroup_2002]. In the absence of state-institutions local leaders are often tasked with managing various economic systems and providing social services.  
 
-The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with the many evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [e.g., @hooper_theory_2010; @van_vugt_cognitive_2007; @glowacki_formation_2016; for review, see @garfield_evolutionary_2019]. In the ethnographic record such functions includes controlling and facilitating economic productivity and ensuring collective actions do not overly conflict with individual or household-level goals, such as among the Tukano of the Brazilian Amazon, where @sq19-018 (p. 127) notes: 
+The larger organization subcluster included variables such as *Organize cooperation*, *Ritual functions*, and *Military command*. This subcluster aligns with the many evolutionary theories of leadership that emphasize the role of leaders in organizing collective actions [e.g., @hooper_theory_2010; @van_vugt_cognitive_2007; @glowacki_formation_2016; for review, see @garfield_evolutionary_2019]. In the ethnographic record such functions includes controlling and facilitating economic productivity and ensuring collective actions do not overly conflict with individual or household-level goals, such as among the Tukano of the Brazilian Amazon, where @sq19-018 [p. 127] notes: 
 
 >Wanano chieftainship entails control over three major aspects of village life: fishing resources, labor, and ritual. A mahsa wami must hold sway over all three areas to lead effectively. Inability to harvest and redistribute fish, for example, will make it difficult for the mahsa wami to mobilize and coordinate labor. Control, then, implies the obligation to redistribute. The chief mobilizes and coordinates communal labor, carefully balancing collective projects against individual work such as gardening, so that collective and individual labor do not conflict. I observed several kinds of community projects in Wanano villages, including the construction and maintenance of houses, the clearing and burning of gardens, and the intensive preparations for intersib po?oa exchange ceremonies.
 
 ## Benefits and costs of leadership and followership
 
-The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership must also outweigh the costs. We therefore coded all benefits and costs of both leadership and followership to better understand which benefits and costs are most commonly associated with leading or following. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine, however, if the benefits to leaders and followers outweighed their costs, but shed light on the social and biological pressures associated with leadership and social hierarchy. See Figure \@ref(fig:varsupportcb).
-
-For both leaders and followers, in summary, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
+The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership must also outweigh the costs. We therefore coded all benefits and costs of both leadership and followership to better understand which benefits and costs are most commonly associated with leading or following. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine if the benefits to leaders and followers outweighed their costs, but they do shed light on the social and biological pressures associated with leadership and social hierarchy. For both leaders and followers, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
 
 ## Synthesis
 
@@ -373,11 +371,11 @@ One interesting pattern that has not been widely discussed in the evolutionary l
 
 We also found a link between prestige-based leadership, which is associated with deference towards accomplished individuals with expertise, special skills, and high intelligence [@cheng_dominance_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, charismatic personality, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
 
-The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." Theses results suggests anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporate and pay close attention to group processes and social strategies associated with leadership and followership. 
+The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." These results suggest anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporate and pay close attention to group processes and social strategies associated with leadership and followership. 
 
 ## Limitations 
 
-This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We, however, view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record [see @rosaldo_woman_1974; @mukhopadhyay_anthropological_1988]. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
+This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We nevertheless view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record [see @rosaldo_woman_1974; @mukhopadhyay_anthropological_1988]. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
 
 Another limitation lies in our ability to interpret the absence of evidence. We are confident that the cross-culturally frequent measures discussed here and strongly represented in the ethnographic record and hence very likely to represent broad cross-cultural patterns in human behavior and culture. We cannot strongly conclude, however, that the relatively infrequent measures identified here are truly infrequent dimensions of human behavior and culture, only that they are relatively less frequent in the ethnographic record. Nonetheless, results reported here provide a broad, comprehensive, and cross-cultural framework for future empirical and theoretical work to draw on. 
 
