--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Leader functions and qualities across 59 cultures: an exploratory analysis"
+title: "Leadership across 59 traditional cultures: an exploratory analysis"
 author: "Zachary H. Garfield, Kristen L. Syme, and Edward H. Hagen"
 date: "4/25/2019"
 output: 
@@ -363,23 +363,21 @@ The larger organization subcluster included variables such as *Organize cooperat
 
 The evolution of leadership and followership is somewhat perplexing. Leadership often involves the provisioning of a public good at an individual cost, raising the question of how the individual benefits of leadership outweigh the costs. Followership, on the other hand, involves relinquishing individual decision-making to a leader who might or might not act in the follower's interest. The benefits of followership must also outweigh the costs. We therefore coded all benefits and costs of both leadership and followership to better understand which benefits and costs are most commonly associated with leading or following. Leaders were widely reported to receive material benefits and social status, but loss of material resources and social status were also widely reported. The results were similar for followers: followers benefited from increased material and social resources, but also often lost material and social resources. Our results cannot determine if the benefits to leaders and followers outweighed their costs, but they do shed light on the social and biological pressures associated with leadership and social hierarchy. For both leaders and followers, individuals stood to lose what they were able to gain. The major difference between leaders and followers lay in leaders' opportunities for increased social status and mating opportunities, relative to followers. See Figure \@ref(fig:varsupportcb).
 
-## Synthesis
-
-In general, our results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership and provide broad cross-cultural support for several influential theoretical predictions [for review, see @garfield_evolutionary_2019]. Leaders in the ethnographic record are portrayed as generally prosocial, and serve to resolve conflicts and organize cooperation. Leaders also receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression.
-
-One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social costs cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n = 43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
-
-We also found a link between prestige-based leadership, which is associated with deference towards accomplished individuals with expertise, special skills, and high intelligence [@cheng_dominance_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, charismatic personality, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
-
-The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." These results suggest anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporate and pay close attention to group processes and social strategies associated with leadership and followership. 
-
 ## Limitations 
 
 This study is based on the ethnographic record. Our methods are designed to capture a broad range of ethnographic descriptions from a culturally representative, systematic sample. Nonetheless, these results are conditional upon the content ethnographers chose to discuss and the way they chose to discuss it. The ethnographic record is certainly an imperfect source of information on human cultural diversity and hence a limitation of the current results. We nevertheless view the existence of the ethnographic record and the availability and functionality of the eHRAF as an enormous benefit for comparative research, given many of the populations represented in these data no longer exist or live as they did during the time of much ethnographic description. Within these ethnographic descriptions there is a general male bias, which could reflect a male bias in community leadership or the more systemic male bias in the ethnographic record [see @rosaldo_woman_1974; @mukhopadhyay_anthropological_1988]. These data are also biased towards cultural models (rather than descriptions of observed behavior) and community leadership; descriptions of kin group and residential group leadership are less frequent. The high proportion of text records discussing political group leaders could be attributable to our broad search strategy or the content of the ethnographic record of "leadership" more generally. 
 
 Another limitation lies in our ability to interpret the absence of evidence. We are confident that the cross-culturally frequent measures discussed here and strongly represented in the ethnographic record and hence very likely to represent broad cross-cultural patterns in human behavior and culture. We cannot strongly conclude, however, that the relatively infrequent measures identified here are truly infrequent dimensions of human behavior and culture, only that they are relatively less frequent in the ethnographic record. Nonetheless, results reported here provide a broad, comprehensive, and cross-cultural framework for future empirical and theoretical work to draw on. 
 
-# Conclusion
+# Concluding remarks
+
+Our results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership and provide broad cross-cultural support for several influential theoretical predictions [for review, see @garfield_evolutionary_2019]. Leaders in the ethnographic record are portrayed as generally prosocial, and serve to resolve conflicts and organize cooperation. Leaders also receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression.
+
+One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social costs cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n = 43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
+
+We also found a link between prestige-based leadership, which is associated with deference towards accomplished individuals with expertise, special skills, and high intelligence [@cheng_dominance_2019; @henrich_evolution_2001], and charismatic leadership, which is associated with oratory skills, charismatic personality, confidence, and interpersonal skills [@grabo_charismatic_2016; @howell_role_2005]. See, Figure \@ref(fig:cluster)A, *Ability to provide social benefits* cluster. This suggests that these leadership strategies might be closely related across a broad range of societies and social contexts, or part of a broader strategy of social influence based on the provisioning of various benefits.
+
+The strong support for material and social benefits associated with leadership (Figure \@ref(fig:varsupportcb)) and the colinearity of measures associated with material wealth, social capital, and reproductive success (Figure \@ref(fig:cluster)A), suggests processes of leadership and followership might be strong drivers of the emergence and intergenerational transmission of inequality [@bowles_emergence_2010; @mattison_evolution_2016]. Various sources of material wealth and strategic or institutionalized processes of nepotism are widespread cross-culturally, including among many societies often described as "egalitarian." These results suggest anthropologists and economists investigating the emergence and evolution of inequality, including material, social, and reproductive dimensions, should incorporate and pay close attention to group processes and social strategies associated with leadership and followership. 
 
 These exploratory results provide an empirical foundation for future research on leadership across or within diverse cultural settings and across all levels of social organization. Political leadership is common across a broad range of populations, including among relatively small-scale and egalitarian hunter-gatherers. Among hunter-gatherers, however, leaders more frequently emerge within residential subgroups and kin groups. Given the vast majority of human evolutionary history involved subsistence economies characterized by hunting and gathering and greater residential mobility [@lee_cambridge_1999; @marlowe_hunter-gatherers_2005], these results suggest leadership within kin groups and local subgroups likely has a long evolutionary history. Despite a universal male-bias in political leadership at the community level, women are expected to have greater decision-making responsibilities and adopt leadership roles within families and local groups [@brown_her_1985; @garfield_evolutionary_2019; @hagen_leadership_2019; @smith_obstacles_2018; @von_rueden_sex_2018]. 
 
