Edits to first paragraph of conclusion

--- a/leadership_across_cultures_contexts.Rmd
+++ b/leadership_across_cultures_contexts.Rmd
@@ -371,7 +371,7 @@ Another limitation lies in our ability to interpret the absence of evidence. We 
 
 # Concluding remarks
 
-Our results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership and provide broad cross-cultural support for several influential theoretical predictions [for review, see @garfield_evolutionary_2019]. Leaders in the ethnographic record are portrayed as generally prosocial, and serve to resolve conflicts and organize cooperation. Leaders also receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression.
+Leaders in the ethnographic record are portrayed as generally prosocial, serve to resolve conflicts and organize cooperation, and receive material, social, and reproductive benefits. There is also a "dominant" style of leadership involving physical formidability, fear, and aggression. These results conform to the characteristics of leaders that are emphasized in the literature on the evolution of leadership and provide broad cross-cultural support for several influential theories, such as the prestige-dominance model, the collective action model, the service-for-prestige model, and the computational services model [for review, see @garfield_evolutionary_2019].
 
 One interesting pattern that has not been widely discussed in the evolutionary literature on leadership is the role of shamans and their intersection, in our results, with the dominant style of leadership. Our social costs cluster (Figure \@ref(fig:cluster)A) includes the *Supernatural* abilities variable. @winkelman1987cross found that in 47% of societies sampled from the HRAF ($n = 43$) shamans were associated with providing decision-making services and associated with military power. Providing ritual functions and military leadership are common (documented in over 50% of societies here) functions leaders serve (see Figure \@ref(fig:varsupport)). Widespread preferences for egalitarianism and social equality are likely strong drivers of leader preferences across diverse societies [@cheng_dominance_2019], but shamanism and ritual based contexts represent a social domain in which ideologies support dominance-based leadership. 
 
